src/test/rustdoc-ui/intra-doc/alias-ice.stderr
error: unresolved link to `TypeAlias::hoge`
  --> $DIR/alias-ice.rs:5:30
   |
LL | /// [broken cross-reference](TypeAlias::hoge)
   |                              ^^^^^^^^^^^^^^^ the type alias `TypeAlias` has no associated item named `hoge`
   |
note: the lint level is defined here
  --> $DIR/alias-ice.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

